--- a/src/index.css
+++ b/src/index.css
@@ -134,7 +134,7 @@ nav .right-container button {
 .content-box .box .tv {
     width: 80px;
     height: 80px;
-    background: url('../public/images/Icon\ \(1\).png');
+    background: url('../public/images/Icon (1).png');
    
 }
 
@@ -650,5 +650,5 @@ del {
     width: 120px;
     height: 42.688px;
     flex-shrink: 0;
-    background: url('../public/images/Frame\ 12537.png');
+    background: url('../public/images/Frame 12537.png');
 }
