--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,6 @@ body {
     justify-content: space-evenly;
     padding: 20px 30px;
     background: url('../public/images/Back Ground.png');
-    width: 1920px;
-    height: 1008px;
+    width: 100%;
     flex-shrink: 0;
 }
